--- a/starter/style.css
+++ b/starter/style.css
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+
 }
 
 .clearfix::after {
@@ -80,7 +80,7 @@ body {
     color: #EB4D4D;
     top: -7px;
     right: 10px;
-    
+
 }
 
 .player-current-box {
@@ -141,10 +141,30 @@ i {
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
 
+.set-winning-score {
+    position: absolute;
+    top: 100px;
+    left:45%;
+}
+.set-winning-score-label {
+    position: absolute;
+    top: 80px;
+    left:45%;
+}
+
 .dice {
     position: absolute;
     left: 50%;
     top: 178px;
+    transform: translateX(-50%);
+    height: 100px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+
+.dice2 {
+    position: absolute;
+    left: 50%;
+    top: 278px;
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
